--- a/source/less/global/button.less
+++ b/source/less/global/button.less
@@ -2,7 +2,7 @@
 .button {
   padding: 10px 44px;
   width: 280px;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: "Abel", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -12,18 +12,6 @@
   text-transform: uppercase;
   color: #ffffff;
   border: none;
-}
-
-
-@media (min-width: @tablet-width) {
-  .button {
-    width: 248px;
-    font-size: 16px;
-    line-height: 20px;
-    margin-left: 91px;
-    margin-top: 29px;
-    position: relative;
-  }
 }
 
 
