--- a/source/less/global/container.less
+++ b/source/less/global/container.less
@@ -2,22 +2,15 @@
 
 .container {
   display: block;
-  width: 280px;
+  width: 95%;
   margin: 0 auto;
   padding: 0;
 }
 
-@media (min-width: @tablet-width) {
-  .container {
-    min-width: 708px;
-    margin: 0 auto;
-    padding: 0;
-  }
-}
 
 @media (min-width: @desktop-width) {
   .container {
-    min-width: 1220px;
+    width: 95%;
     margin: 0 auto;
     padding: 0;
   }
