--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,6 +1,6 @@
 body {
-  font-family: "Oswald", "Arial", sans-serif;
-  background: #ffffff;
+  font-family: "Abel", sans-serif;
+  background: linear-gradient(180deg, #0167FB 0%, #013C8F 100%);
   width: 100%;
   margin: 0 auto;
   padding: 0;
@@ -8,6 +8,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  color: white;
 }
 
 a {
@@ -44,16 +45,9 @@ img {
   color: rgba(255, 255, 255, 0.3);
 }
 
-@media (min-width: @tablet-width) {
-  body {
-    background: #ffffff;
-    min-width: 768px;
-  }
-}
-
 @media (min-width: @desktop-width) {
   body {
     background: #ffffff;
-    min-width: 1440px;
+    min-width: 415px;
   }
 }
