--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,22 +3,11 @@
 @import "./global/global.less";
 @import "./global/page.less";
 @import "./global/container.less";
-@import "./global/container-form.less";
+
 @import "./global/viewports.less";
 @import "./global/button.less";
-@import "./global/page-title.less";
-@import "./blocks/page-form-title.less";
 @import "./blocks/page-header.less";
 @import "./blocks/main-nav.less";
-@import "./blocks/promo.less";
-@import "./blocks/slimming-pumping-block.less";
-@import "./blocks/features.less";
-@import "./blocks/example.less";
-@import "./blocks/slider-bar.less";
-@import "./blocks/cooperation.less";
-@import "./blocks/map.less";
-@import "./blocks/footer.less";
-@import "./blocks/catalog.less";
-@import "./blocks/additional.less";
-@import "./blocks/gift.less";
-@import "./blocks/form.less";
+
+
+// @import "./blocks/form.less";
