--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,69 +1,76 @@
 // Начните писать стили здесь
+.main-nav {
+  min-width: 280px;
+  position: relative;
+  padding: 0;
+  margin: 0 auto;
+}
 
 .main-nav__list {
-  left: -20px;
-  top: 64px;
-  margin: 0;
+
+  margin: 0 auto;
   padding: 0;
-  min-width: 320px;
+
 }
 
 .main-nav__list-item {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: "Abel", sans-serif;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 20px;
-  line-height: 20px;
-  text-transform: uppercase;
-  color: #000000;
+  line-height: 26px;
+  color: white;
   list-style: none;
   text-align: center;
   padding-top: 22px;
   padding-bottom: 24px;
   box-sizing: border-box;
   cursor: pointer;
-  background-color: #ffffff;
-  border-top: 1px solid #e6e6e6;
-  border-bottom: 1px solid #e6e6e6;
+
+
 }
+
+.main-nav__list-item:last-child {
+  display: none;
+}
+
+.main-nav__list-item:first-child {
+  border-bottom: 1px solid #1F77F7;
+  text-transform: uppercase;
+}
+
 
 .main-nav__list-item a {
   text-decoration: none;
-  color: #000000;
+  color: white;
 }
 
-.main-nav__link--border-bottom,
-.main-nav__border-bottom-form,
-.main-nav__border-bottom-catalog {
-  border-bottom: 2px solid #68b738;
-  padding-bottom: 6px;
-}
 
-.main-nav__list-item a:hover {
-  color: rgba(0, 0, 0, 0.7);
-}
 
-.main-nav__list-item a:focus {
-  color: rgba(0, 0, 0, 0.5);
-}
 
-.main-nav__list-item a:active {
-  color: rgba(0, 0, 0, 1);
-  border-bottom: 2px solid #68b738;
-}
+// .main-nav__list-item a:hover {
+//   color: rgba(0, 0, 0, 0.7);
+// }
 
-.main-nav {
-  width: 100%;
-  position: relative;
-}
+// .main-nav__list-item a:focus {
+//   color: rgba(0, 0, 0, 0.5);
+// }
+
+// .main-nav__list-item a:active {
+//   color: rgba(0, 0, 0, 1);
+//   border-bottom: 2px solid #68b738;
+// }
+
+
 
 .main-nav__toggle {
   position: absolute;
-  top: -44px;
+  top: 44px;
   right: 20px;
   cursor: pointer;
   padding: 0;
   background-color: transparent;
+  color: transparent;
   width: 24px;
   height: 18px;
   border: none;
@@ -77,7 +84,7 @@
   height: 2px;
   left: -1px;
   top: 3px;
-  background-color: #000000;
+  background-color: white;
   cursor: pointer;
 }
 
@@ -87,7 +94,7 @@
   transform: rotate(-45deg);
   width: 24px;
   height: 2px;
-  background-color: #000000;
+  background-color: white;
   left: -1px;
   top: 3px;
   cursor: pointer;
@@ -157,71 +164,40 @@
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .main-nav {
-    width: 100%;
-    padding-bottom: 6px;
+    background: transparent;
+    z-index: 5;
   }
 
-  .main-nav--closed,
-  .main-nav--opened {
-    .main-nav__list {
-      position: static;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-
-    .main-nav__list-item {
-      font-weight: 400;
-      display: block;
-      font-size: 18px;
-      line-height: 24px;
-      padding: 0;
-      border: none;
-    }
-
-    .main-nav__toggle {
-      display: none;
-    }
+  .main-nav__list-item {
+    background: transparent;
   }
 
+  .main-nav__link--border-bottom {
+    border-bottom: 2px solid #ffffff;
+  }
 
-  @media (min-width: @desktop-width) {
-    .main-nav {
-      background: transparent;
-      z-index: 5;
-    }
+  .main-nav__list-item .main-nav__link {
+    color: #ffffff;
+  }
 
-    .main-nav__list-item {
-      background: transparent;
-    }
+  .main-nav__list-item .main-nav__link:hover {
+    color: rgba(255, 255, 255, 0.7);
+  }
 
-    .main-nav__link--border-bottom {
-      border-bottom: 2px solid #ffffff;
-    }
+  .main-nav__list-item .main-nav__link:focus {
+    color: rgba(255, 255, 255, 0.5);
+  }
 
-    .main-nav__list-item .main-nav__link {
-      color: #ffffff;
-    }
+  .main-nav__list-item .main-nav__link:active {
+    border-bottom: 2px solid #ffffff;
+    color: #ffffff;
+  }
 
-    .main-nav__list-item .main-nav__link:hover {
-      color: rgba(255, 255, 255, 0.7);
-    }
-
-    .main-nav__list-item .main-nav__link:focus {
-      color: rgba(255, 255, 255, 0.5);
-    }
-
-    .main-nav__list-item .main-nav__link:active {
-      border-bottom: 2px solid #ffffff;
-      color: #ffffff;
-    }
-
-    .main-nav__list-item a {
-      background: transparent;
-      font-size: 20px;
-      line-height: 30px;
-    }
+  .main-nav__list-item a {
+    background: transparent;
+    font-size: 20px;
+    line-height: 30px;
   }
 }
