--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Abel";
+  font-family: "Abel", sans-serif;;
   src:   url("../fonts/Abel-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
