--- a/source/less/global/button.less
+++ b/source/less/global/button.less
@@ -1,19 +1,31 @@
 // Начните писать стили здесь
-.button {
-  padding: 10px 44px;
-  width: 280px;
-  font-family: "Abel", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
-  border: none;
-}
+// .button {
+//   padding: 10px 44px;
+//   width: 280px;
+//   font-family: "Abel", sans-serif;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 16px;
+//   line-height: 20px;
+//   align-items: center;
+//   text-align: center;
+//   text-transform: uppercase;
+//   color: #ffffff;
+//   border: none;
+// }
 
+.primary-button {
+  background: #FFB900;
+  border-radius: 37px;
+  width: 352px;
+  height: 57px;
+  font-family: 'Abel';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 25px;
+  color: #FFFFFF;
+}
 
 @media (min-width: @desktop-width) {
   .button {
