--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -47,7 +47,7 @@ img {
 
 @media (min-width: @desktop-width) {
   body {
-    background: #ffffff;
+    background: linear-gradient(180deg,#0167fb 0,#013c8f 100%);
     min-width: 415px;
   }
 }
