--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -41,16 +41,13 @@
     border: none;
     font-size: 20px;
     line-height: 25px;
-    padding-right: 20px;
-      background-repeat: no-repeat;
+    padding-right: 36px;
+    background-repeat: no-repeat;
     background-image: url('/img/icon-select-triangle.svg');
+    background-position: right;
     appearance: none;
     outline: 0;
   }
 
-  // select:not([multiple]) {
-
-
-  // }
 
 }
