--- a/source/less/global/page.less
+++ b/source/less/global/page.less
@@ -2,5 +2,5 @@
   height: 100%;
   font-family: "Abel", sans-serif;
   line-height: 26px;
-  background: linear-gradient(180deg,#0167fb 0,#013c8f 100%);
+  // background: linear-gradient(180deg,#0167fb 0,#013c8f 100%);
 }
