--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,6 +1,7 @@
 body {
   font-family: "Abel", sans-serif;
   background: linear-gradient(180deg, #0167FB 0%, #013C8F 100%);
+  background-attachment: fixed;
   width: 100%;
   margin: 0 auto;
   padding: 0;
@@ -47,7 +48,8 @@ img {
 
 @media (min-width: @desktop-width) {
   body {
-    background: linear-gradient(180deg,#0167fb 0,#013c8f 100%);
+    background: linear-gradient(180deg, #0167fb 0, #013c8f 100%);
     min-width: 415px;
+    background-attachment: fixed;
   }
 }
