--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -1,6 +1,9 @@
 .main {
   margin-bottom: 90px;
 }
+.main-img {
+  max-width: 100%;
+}
 
 .main-caption {
   font-size: 39px;
@@ -41,6 +44,8 @@
   }
 
   .main-img {
+    width: 50%;
+    height: 50%;
     margin-right: 77px;
   }
 
