--- a/source/less/global/button.less
+++ b/source/less/global/button.less
@@ -31,6 +31,7 @@ display: none;
 
 @media (min-width: @desktop-width) {
   .page-header__button {
+    display: block;
     background: transparent;
     width: 159px;
     height: 57px;
