--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -107,7 +107,8 @@
     top: 0;
     margin: 0;
     padding: 0;
-    min-width: 320px;
+    // min-width: 320px;
+    width: min-content;
     z-index: 20;
   }
 
@@ -154,31 +155,34 @@
     display: none;
   }
 
-
-
   .main-nav {
+    min-width: min-content;
     display: block;
     width: 100%;
     padding: 0;
     margin: 0 auto;
+    margin-right: 10px;
   }
 
   .main-nav__toggle,
   #page-language {
     display: block;
   }
+
   .main-nav--closed {
-  .main-nav__list {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 0;
-    margin-right: 70px;
-  }
+    .main-nav__list {
+      display: flex;
+      justify-content: space-between;
+      margin: 0 auto;
+      padding: 0;
+      margin-right: 70px;
+      width: 100%;
+    }
   }
 
   .main-nav__list-item {
     display: block;
+    margin-right: 5px;
     font-family: "Abel", sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -200,5 +204,10 @@
   .main-nav__list-item:first-child {
     border-bottom: none;
     text-transform: none;
+  }
+
+  .main-nav__list-item:hover {
+    border-bottom: 4px;
+    border-color: #F2B34B;
   }
 }
