--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,10 +2,15 @@
 @import "./global/fonts.less";
 @import "./global/global.less";
 @import "./global/page.less";
-@import "./global/viewports.less";
 @import "./global/container.less";
+@import "./global/viewports.less";
 
 @import "./global/button.less";
 @import "./blocks/page-header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/main.less";
+
+@import "./blocks/courier-call-page/courier-call-page-body.less";
+@import "./blocks/courier-call-page/main-sender.less";
+
+
